components/Header/header.scss
.header {
  &--default {
    width: 100%;
    height: 50px;
    background-color: var(--color-shade-2);

    .header--desktop {
      display: none;
    }

    .header--mobile {
      display: flex;
      align-items: center;
      justify-content: center;
      text-align: center;

      &__toggle {
        position: fixed;
        right: 0;
        bottom: 0;
        margin: 20px;
        background-color: var(--color-accent);
        width: 10px;
        height: 10px;
        padding: 20px;
        border-radius: 50%;
        color: var(--color-shade-1);
        z-index: 1000;

        svg {
          fill: black;
          position: absolute;
          width: 20px;
          left: 10px;
          top: 10px;

          rect {
            transition: all 0.3s ease-in;
          }
        }

        &.is-active {
          rect {
            transform: translateX(400px);
          }

          rect:first-child {
            transform: rotate(45deg) translate(60px, -300px);
          }

          rect:last-child {
            transform: rotate(-45deg) translate(-180px, 170px);
          }
        }
      }

      &__options {
        position: fixed;
        display: flex;
        flex-direction: column;
        align-items: center;
        background: var(--color-shade-0);
        top: 0;
        bottom: 0;
        left: 0;
        right: 100vh;
        width: 100vw;
        z-index: 100;
        transform: translateX(100%);
        will-change: translate;
        transition: all 0.5s linear;
        padding: 20px;

        &.is-active {
          transform: translateX(0);
        }
      }
    }

    @include breakpoint(s) {
      .header--desktop {
        display: grid;
        align-items: center;
        grid-template-columns: 1fr 1fr 1fr;
      }

      .header--mobile {
        display: none;
      }
    }

    .header {
      &__logo {
        text-align: center;
        margin: 0 auto;

        .image {
          max-height: 50px;
          padding: 5px;
        }
      }

      &__contact {
        display: grid;
        grid-template-columns: 50px 1fr;
        margin: 0 auto;

        .phone {
          display: grid;
          align-items: end;
          font-weight: bold;
        }

        .icon {
          align-self: center;
          grid-row: span 2 / 1;
        }

        .time {
          font-weight: lighter;
          font-size: var(--font-size-2xs);
          color: var(--color-shade-4);
        }
      }

      &__searcher {
        max-width: 200px;
        display: flex;
        align-items: flex-start;
        position: relative;
        margin: 0 auto;

        .icon {
          position: absolute;
          right: 5px;
          top: 5px;
          width: 15px;
          opacity: 0.7;
        }

        .searcher {
          width: 100%;
          margin: 0 auto;
          padding: 5px 10px;
          text-transform: capitalize;
          border-color: rgba(black, 0.2);

          &:hover,
          &:focus {
            border-color: rgba(black, 0.6);
          }
        }
      }
    }
  }
}

